--- a/test/dummy/Gemfile
+++ b/test/dummy/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 
-# Use the control_room engine
-gem "control_room", path: "../.."
+# Use the recording_studio engine
+gem "recording_studio", path: "../.."
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 8.1.1"
