--- a/test/dummy/Gemfile
+++ b/test/dummy/Gemfile
@@ -3,6 +3,9 @@ source "https://rubygems.org"
 # Use the recording_studio engine
 gem "recording_studio", path: "../.."
 
+# Authentication for the dummy app
+gem "devise"
+
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 8.1.1"
 # The modern asset pipeline for Rails [https://github.com/rails/propshaft]
