--- a/test/dummy/Gemfile
+++ b/test/dummy/Gemfile
@@ -28,7 +28,7 @@ gem "jbuilder"
 gem "tailwindcss-rails"
 
 # MakeupArtist UI component library
-gem "makeup_artist", git: "https://#{ENV['PERSONAL_ACCESS_TOKEN']}@github.com/bowerbird-app/makeup-artist.git"
+gem "makeup_artist", git: "https://github.com/bowerbird-app/makeup-artist.git"
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
 # gem "bcrypt", "~> 3.1.7"
