install-flatpak: add flatpack config and dummy app updates

--- a/test/dummy/config/flatpack/styling_rules.yml
+++ b/test/dummy/config/flatpack/styling_rules.yml
@@ -1,4 +1,4 @@
-# MakeupArtist Styling Rules
+# Flatpack Styling Rules
 # These rules are displayed in the style guide and generated documentation.
 # Add organization-wide styling constraints here.
 
