--- a/test/dummy/Gemfile
+++ b/test/dummy/Gemfile
@@ -27,8 +27,8 @@ gem "jbuilder"
 # Use Tailwind CSS [https://github.com/rails/tailwindcss-rails]
 gem "tailwindcss-rails"
 
-# MakeupArtist UI component library
-gem "makeup_artist", git: "https://github.com/bowerbird-app/makeup-artist.git"
+# Flatpack UI component library
+gem "flat_pack", git: "https://github.com/bowerbird-app/flatpack.git"
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
 # gem "bcrypt", "~> 3.1.7"
