--- a/test/dummy/Gemfile
+++ b/test/dummy/Gemfile
@@ -54,6 +54,9 @@ gem "thruster", require: false
 gem "image_processing", "~> 1.2"
 
 group :development, :test do
+  gem "minitest"
+  gem "simplecov", require: false
+
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
 
