--- a/test/dummy/config/database.yml
+++ b/test/dummy/config/database.yml
@@ -33,6 +33,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  url: <%= ENV.fetch("DATABASE_URL") { "postgres://postgres:postgres@localhost:5432/gem_template_test" } %>
   database: <%= ENV.fetch("DB_NAME_TEST") { "#{ENV.fetch("DB_NAME") { "app_development" }}_test" } %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
